# toVerify

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ls-tmp-test.yaml  ls_tmp.yaml  pyproject.toml  toVerify.py
examples/: ls_tmp.yaml
src/toVerify/: core.py  profile.py
src/toVerify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
toVerify/: __main__.py  core.py  parser.py  profile.py
toVerify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
toVerify/tests/: test_core.py  test_parser.py
